Clean up overflow issues within breadcrumbs

--- a/app/assets/stylesheets/components/content/crown.css.scss
+++ b/app/assets/stylesheets/components/content/crown.css.scss
@@ -99,7 +99,6 @@
 		#breadcrumb-region:hover .breadcrumb {
 			left: 0;
 			width: 100%;
-			overflow: visible;
 			> li + li:before ,
 			> li.chain-breadcrumb,
 			> li.chain-breadcrumb a {
